--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
     "@nestjs/class-validator": "^0.13.4",
+    "@truffle/contract": "^4.6.18",
     "@truffle/hdwallet-provider": "^2.1.9",
     "app-root-path": "^3.1.0",
     "connect-redis": "^7.0.1",
     "express-session": "^1.17.3",
     "ioredis": "^5.3.1",
     "passport": "^0.6.0",
-    "solc": "^0.8.19"
+    "solc": "^0.8.19",
+    "web3": "^1.9.0"
   }
 }
