--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,10 @@
     "@truffle/hdwallet-provider": "^2.1.9",
     "app-root-path": "^3.1.0",
     "connect-redis": "^7.0.1",
+    "dotenv": "^16.0.3",
     "express-session": "^1.17.3",
     "ioredis": "^5.3.1",
+    "mongoose": "^7.0.3",
     "passport": "^0.6.0",
     "solc": "^0.8.19",
     "web3": "^1.9.0"
