--- a/backend/app-core/package.json
+++ b/backend/app-core/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bullmq": "^1.1.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -29,14 +30,18 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/throttler": "^4.0.0",
     "bcrypt": "^5.1.0",
+    "bullmq": "^3.13.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "connect-redis": "^7.0.1",
+    "ioredis": "^5.3.2",
     "passport-local": "^1.0.0",
     "redis": "^4.6.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "transformer": "^1.2.8"
+    "transformer": "^1.2.8",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
